--- a/src/sys-user/gcash-payment/gcash.css
+++ b/src/sys-user/gcash-payment/gcash.css
@@ -363,4 +363,52 @@ main .container .product-cont .gcash-cont .g-dl a:hover {
 main .container .product-cont .gcash-cont .g-dl p {
   font-size: 0.8rem;
   color: #a8896c;
+}
+
+@media (max-width: 575px) {
+  header {
+    height: 50px;
+    z-index: 999;
+  }
+  header .app-name a {
+    margin-left: 20px;
+  }
+  header .app-name a img {
+    width: 20px;
+    height: 20px;
+  }
+  header .app-name a h1 {
+    font-size: 0.9rem;
+  }
+  .divider p {
+    margin-left: 20px;
+    font-size: 0.4rem;
+  }
+  main .container {
+    width: 100%;
+  }
+  main .container .product-cont {
+    width: 100%;
+  }
+  main .container .product-cont .prod-back {
+    width: 100%;
+    height: 30px;
+  }
+  main .container .product-cont .prod-back a {
+    margin-bottom: 7px;
+  }
+  main .container .product-cont .prod-back a img {
+    width: 10px;
+    height: 10px;
+  }
+  main .container .product-cont .prod-back p {
+    font-size: 0.8rem;
+    margin-left: -10px;
+  }
+  main .container .product-cont .gcash-cont {
+    width: 100%;
+  }
+  main .container .product-cont .gcash-cont .g-btn a {
+    padding: 5px 145px;
+  }
 }/*# sourceMappingURL=gcash.css.map */
