--- a/src/sys-user/gcash-payment/gcash.scss
+++ b/src/sys-user/gcash-payment/gcash.scss
@@ -155,3 +155,74 @@ main {
         }
     }
 }
+
+//Media Queries/Responsive design
+@include extra-small {
+    //header
+    header {
+        height: 50px;
+        z-index: 999;
+
+        .app-name {
+            a {
+                margin-left: 20px;
+                
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                h1 {
+                    font-size: .9rem;
+                }
+            }
+        }
+    }
+
+    .divider {
+         p {
+            margin-left: 20px;
+            font-size: .4rem;
+        }
+    }
+
+    main {
+        .container {
+            width: 100%;
+
+            .product-cont {
+                width: 100%;
+
+                .prod-back {
+                    width: 100%;
+                    height: 30px;
+
+
+                    a {
+                        margin-bottom: 7px;
+                        img {
+                            width: 10px;
+                            height: 10px;
+                        }
+                    }
+                    
+                    p {
+                        font-size: .8rem;
+                        margin-left: -10px;
+                    }
+                }
+
+
+                .gcash-cont {
+                    width: 100%;
+
+                    .g-btn {
+                        a {
+                            padding: 5px 145px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
