--- a/src/sys-user/message-page/userMessage.css
+++ b/src/sys-user/message-page/userMessage.css
@@ -595,4 +595,403 @@ main .container .progress-cont .progress .progress-bar-cont .canvas .progress-ti
 main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .line {
   border: 2px dotted #ffffff;
   margin-top: 10px;
+}
+main .container .open-progress {
+  display: none;
+}
+
+@media (max-width: 575px) {
+  header {
+    height: 50px;
+    z-index: 999;
+  }
+  header .app-name a {
+    margin-left: 20px;
+  }
+  header .app-name a img {
+    width: 20px;
+    height: 20px;
+  }
+  header .app-name a h1 {
+    font-size: 0.9rem;
+  }
+  header .block {
+    display: none;
+  }
+  header .nav-phone {
+    display: block;
+    width: 50%;
+    text-align: right;
+  }
+  header .nav-phone .a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.8rem;
+    transition: 0.5s;
+  }
+  header .nav-phone .a:hover {
+    border-bottom: 3px solid #ffffff;
+    padding-bottom: 5px;
+  }
+  header .nav-phone .a span {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    margin-left: -15px;
+    color: #ffffff;
+    background-color: #ee0000;
+    border-radius: 50%;
+    text-align: center;
+    font-family: "Times New Roman", Times, serif;
+  }
+  header .nav-phone .dropbtn {
+    margin-right: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.8rem;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+  header .nav-phone .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  header .nav-phone .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 20px;
+    margin-top: 5px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  header .nav-phone .dropdown-content a {
+    color: black;
+    padding: 8px 10px;
+    font-size: 0.9rem;
+    text-decoration: none;
+    display: block;
+  }
+  header .nav-phone .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+  header .nav-phone .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  header .nav-phone .dropdown:hover .dropbtn {
+    border-bottom: 3px solid #ffffff;
+    padding-bottom: 5px;
+  }
+  .divider p {
+    margin-left: 20px;
+    font-size: 0.4rem;
+  }
+  main .container {
+    width: 100%;
+  }
+  main .container .message-cont {
+    width: 100%;
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    position: fixed;
+    bottom: 68px;
+    z-index: 99;
+  }
+  main .container .message-cont .message-head {
+    width: 100%;
+    height: 40px;
+  }
+  main .container .message-cont .message-head img {
+    width: 20px;
+    height: 20px;
+  }
+  main .container .message-cont .message-head .shop {
+    font-size: 0.8rem;
+  }
+  main .container .message-cont .message-head .refresh-btn {
+    margin-left: 80px;
+  }
+  main .container .message-cont .message-head .refresh-btn .your_div {
+    font-size: 0.6rem;
+  }
+  main .container .message-cont .message-head .refresh-btn a {
+    font-size: 0.6rem;
+  }
+  main .container .message-cont .message-box {
+    width: 100%;
+    height: 60vh;
+    border: none;
+    box-shadow: none;
+    position: relative;
+    z-index: 99;
+    background-color: #ffffff;
+  }
+  main .container .message-cont .message-box .message-me .message-one img {
+    width: 98%;
+  }
+  main .container .message-cont .message-box .message-me .message-one p {
+    font-size: 0.9rem;
+  }
+  main .container .message-cont .message-box .message-admin .message-two img {
+    width: 98%;
+  }
+  main .container .message-cont .message-box .message-admin .message-two p {
+    font-size: 0.9rem;
+  }
+  main .container .message-cont .message-input {
+    width: 100%;
+    height: 60px;
+    border-radius: 0;
+    margin-bottom: 0;
+    position: fixed;
+    bottom: 0;
+  }
+  main .container .progress-cont {
+    width: 100%;
+  }
+  main .container .progress-cont .progress {
+    display: none;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    height: 75vh;
+  }
+  main .container .progress-cont .progress .progress-header {
+    width: 100%;
+  }
+  main .container .progress-cont .progress .progress-header h2 {
+    font-size: 1rem;
+  }
+  main .container .progress-cont .progress .progress-header button {
+    font-size: 0.7rem;
+  }
+  main .container .progress-cont .progress .progress-bar-cont {
+    width: 100%;
+  }
+  main .container .progress-cont .progress .progress-bar-cont .canvas {
+    height: 85%;
+  }
+  main .container .open-progress {
+    display: block;
+    position: absolute;
+    -webkit-animation: fadeIn 0.5s;
+            animation: fadeIn 0.5s;
+    top: 70px;
+    width: 100%;
+    height: 30px;
+    z-index: 97;
+  }
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  main .container .open-progress button {
+    position: absolute;
+    top: 0;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #a8896c;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  }
+  main .container .open-progress #close {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  main .container {
+    width: 100%;
+  }
+  main .container .message-cont {
+    width: 100%;
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    position: fixed;
+    bottom: 68px;
+    z-index: 99;
+  }
+  main .container .message-cont .message-head {
+    width: 100%;
+    height: 40px;
+  }
+  main .container .message-cont .message-head img {
+    width: 20px;
+    height: 20px;
+  }
+  main .container .message-cont .message-head .shop {
+    font-size: 0.8rem;
+  }
+  main .container .message-cont .message-head .refresh-btn {
+    margin-left: 80px;
+  }
+  main .container .message-cont .message-head .refresh-btn .your_div {
+    font-size: 0.6rem;
+  }
+  main .container .message-cont .message-head .refresh-btn a {
+    font-size: 0.6rem;
+  }
+  main .container .message-cont .message-box {
+    width: 100%;
+    height: 60vh;
+    border: none;
+    box-shadow: none;
+    position: relative;
+    z-index: 99;
+    background-color: #ffffff;
+  }
+  main .container .message-cont .message-box .message-me .message-one img {
+    width: 98%;
+  }
+  main .container .message-cont .message-box .message-me .message-one p {
+    font-size: 0.9rem;
+  }
+  main .container .message-cont .message-box .message-admin .message-two img {
+    width: 98%;
+  }
+  main .container .message-cont .message-box .message-admin .message-two p {
+    font-size: 0.9rem;
+  }
+  main .container .message-cont .message-input {
+    width: 100%;
+    height: 60px;
+    border-radius: 0;
+    margin-bottom: 0;
+    position: fixed;
+    bottom: 0;
+  }
+  main .container .progress-cont {
+    width: 100%;
+  }
+  main .container .progress-cont .progress {
+    display: none;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    height: 75vh;
+  }
+  main .container .progress-cont .progress .progress-header {
+    width: 100%;
+  }
+  main .container .progress-cont .progress .progress-header h2 {
+    font-size: 1rem;
+  }
+  main .container .progress-cont .progress .progress-header button {
+    font-size: 0.7rem;
+  }
+  main .container .progress-cont .progress .progress-bar-cont {
+    width: 100%;
+  }
+  main .container .progress-cont .progress .progress-bar-cont .canvas {
+    height: 85%;
+  }
+  main .container .open-progress {
+    display: block;
+    position: absolute;
+    -webkit-animation: fadeIn 0.5s;
+            animation: fadeIn 0.5s;
+    top: 100px;
+    width: 100%;
+    height: 30px;
+    z-index: 97;
+  }
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  main .container .open-progress button {
+    position: absolute;
+    top: 0;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #a8896c;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  }
+  main .container .open-progress #close {
+    display: none;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  main .container {
+    width: 950px;
+  }
+  main .container .message-cont {
+    width: 600px;
+  }
+  main .container .message-cont .message-head {
+    width: 550px;
+  }
+  main .container .message-cont .message-head .refresh-btn {
+    margin-left: 170px;
+  }
+  main .container .message-cont .message-box {
+    width: 550px;
+    height: 62vh;
+  }
+  main .container .message-cont .message-box .message img {
+    width: 100%;
+  }
+  main .container .message-cont .message-input {
+    width: 550px;
+  }
+  main .container .progress-cont {
+    width: 350px;
+  }
+  main .container .progress-cont .progress {
+    width: 350px;
+  }
+  main .container .progress-cont .progress .progress-header {
+    width: 350px;
+  }
+  main .container .progress-cont .progress .progress-bar-cont {
+    width: 350px;
+  }
+  main .container .progress-cont .progress .progress-bar-cont .canvas {
+    width: 330px;
+  }
+  main .container .progress-cont .progress .progress-bar-cont .canvas .order .spe-order {
+    width: 310px;
+  }
+  main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .percentage {
+    width: 310px;
+  }
+  main .container .progress-cont .progress .progress-bar-cont .canvas .progress-timeline .rate-order {
+    padding: 3px 100px;
+  }
 }/*# sourceMappingURL=userMessage.css.map */
