--- a/src/sys-user/myprofile-page/userProfile.css
+++ b/src/sys-user/myprofile-page/userProfile.css
@@ -226,6 +226,9 @@ main .container {
   display: flex;
   align-items: center;
 }
+main .container .open-shopinfo {
+  display: none;
+}
 main .container .post-cont {
   width: 740px;
   height: 86vh;
@@ -721,4 +724,268 @@ main .container #for-edit .update-cont .content-cont .input input[type=submit], 
 }
 main .container #for-edit .update-cont .content-cont .input input[type=submit]:hover, main .container #for-edit .update-cont .content-cont .input input[type=button]:hover {
   opacity: 80%;
+}
+
+@media (max-width: 575px) {
+  header {
+    height: 50px;
+    z-index: 999;
+  }
+  header .app-name a {
+    margin-left: 20px;
+  }
+  header .app-name a img {
+    width: 20px;
+    height: 20px;
+  }
+  header .app-name a h1 {
+    font-size: 0.9rem;
+  }
+  header .block {
+    display: none;
+  }
+  header .nav-phone {
+    display: block;
+    width: 50%;
+    text-align: right;
+  }
+  header .nav-phone .a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.8rem;
+    transition: 0.5s;
+  }
+  header .nav-phone .a:hover {
+    border-bottom: 3px solid #ffffff;
+    padding-bottom: 5px;
+  }
+  header .nav-phone .a span {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    margin-left: -15px;
+    color: #ffffff;
+    background-color: #ee0000;
+    border-radius: 50%;
+    text-align: center;
+    font-family: "Times New Roman", Times, serif;
+  }
+  header .nav-phone .dropbtn {
+    margin-right: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.8rem;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+  header .nav-phone .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  header .nav-phone .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 20px;
+    margin-top: 5px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  header .nav-phone .dropdown-content a {
+    color: black;
+    padding: 8px 10px;
+    font-size: 0.9rem;
+    text-decoration: none;
+    display: block;
+  }
+  header .nav-phone .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+  header .nav-phone .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  header .nav-phone .dropdown:hover .dropbtn {
+    border-bottom: 3px solid #ffffff;
+    padding-bottom: 5px;
+  }
+  .divider p {
+    margin-left: 20px;
+    font-size: 0.4rem;
+  }
+  main .container {
+    width: 100%;
+  }
+  main .container .post-cont {
+    width: 100%;
+  }
+  main .container .post-cont .prod-back {
+    width: 100%;
+    height: 30px;
+  }
+  main .container .post-cont .prod-back a {
+    margin-bottom: 7px;
+  }
+  main .container .post-cont .prod-back a img {
+    width: 10px;
+    height: 10px;
+  }
+  main .container .post-cont .prod-back p {
+    font-size: 0.8rem;
+    margin-left: -10px;
+  }
+  main .container .post-cont .form-cont {
+    width: 100%;
+    height: 100px;
+  }
+  main .container .post-cont .form-cont textarea {
+    width: 330px;
+    height: 50px;
+  }
+  main .container .post-cont .form-cont .attach-submit input[type=submit] {
+    font-size: 0.8rem;
+    width: 70px;
+  }
+  main .container .post-cont .form-cont .attach-submit a {
+    width: 70px;
+    font-size: 0.8rem;
+    padding: 5px 13px;
+  }
+  main .container .post-cont .category {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  main .container .post-cont .category button {
+    width: 45%;
+  }
+  main .container .post-cont .user-post-cont {
+    width: 100%;
+  }
+  main .container .post-cont .user-post-cont .user-post {
+    width: 100%;
+  }
+  main .container .post-cont .user-post-cont .user-post .pp-name-date .pp-name img {
+    width: 20px;
+    height: 20px;
+  }
+  main .container .post-cont .user-post-cont .user-post .pp-name-date .pp-name h2 {
+    font-size: 1rem;
+  }
+  main .container .post-cont .user-post-cont .user-post .pp-name-date p {
+    font-size: 0.5rem;
+  }
+  main .container .shopinfo-cont {
+    position: absolute;
+    width: 100%;
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    top: 62px;
+  }
+  main .container .shopinfo-cont .shopinfo {
+    display: none;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    -webkit-animation: fadeIn 0.5s;
+            animation: fadeIn 0.5s;
+    overflow-y: scroll;
+  }
+  main .container .shopinfo-cont .shopinfo::-webkit-scrollbar {
+    display: block;
+    width: 5px;
+  }
+  main .container .shopinfo-cont .shopinfo::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  main .container .shopinfo-cont .shopinfo::-webkit-scrollbar-thumb {
+    background-color: #a8896c;
+    border-right: none;
+    border-left: none;
+  }
+  main .container .shopinfo-cont .shopinfo::-webkit-scrollbar-track-piece:end {
+    background: transparent;
+    margin-bottom: 10px;
+  }
+  main .container .shopinfo-cont .shopinfo::-webkit-scrollbar-track-piece:start {
+    background: transparent;
+    margin-top: 10px;
+  }
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  main .container .shopinfo-cont .shopinfo .dl-btn {
+    margin-bottom: 50px;
+  }
+  main .container .open-shopinfo {
+    display: block;
+    position: fixed;
+    -webkit-animation: fadeIn 2s;
+            animation: fadeIn 2s;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: #a8896c;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  main .container .open-shopinfo button {
+    position: absolute;
+    bottom: 0;
+    left: 152px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #a8896c;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  }
+  main .container .open-shopinfo #close {
+    display: none;
+  }
+  main .container #for-edit {
+    width: 100%;
+    margin-top: 20px;
+  }
+  main .container #for-edit .update-cont {
+    width: 100%;
+  }
+  main .container #for-edit .update-cont .back-btn {
+    width: 100%;
+  }
+  main .container #for-edit .update-cont .content-cont {
+    width: 100%;
+  }
+  main .container #for-edit .update-cont .content-cont form .input {
+    width: 100%;
+  }
+  main .container #for-edit .update-cont .content-cont form .input input[type=password], main .container #for-edit .update-cont .content-cont form .input input[type=text], main .container #for-edit .update-cont .content-cont form .input input[type=button], main .container #for-edit .update-cont .content-cont form .input input[type=file] {
+    width: 250px;
+  }
 }/*# sourceMappingURL=userProfile.css.map */
