--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -12,6 +12,10 @@ main {
         height: 86vh;
         @include flexBox();
 
+        .open-shopinfo {
+            display: none;
+        }
+
         .post-cont {
             width: 740px;
             height: 86vh;
@@ -566,6 +570,285 @@ main {
                 }
             }
         }
+    }
+}
+
+@include extra-small {
+    //header
+    header {
+        height: 50px;
+        z-index: 999;
+
+        .app-name {
+            a {
+                margin-left: 20px;
+                
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                h1 {
+                    font-size: .9rem;
+                }
+            }
+        }
+
+        .block {
+            display: none;
+        }
+
+        .nav-phone {
+            display: block;
+            width: 50%;
+            text-align: right;
+
+            .a {
+                text-decoration: none;
+                color: $white-color;
+                font-size: $nav-size;
+                font-weight: 400;
+                font-size: .8rem;
+                transition: 0.5s;
         
+                &:hover {
+                    border-bottom: 3px solid $white-color;
+                    padding-bottom: 5px;
+                }
+        
+                span {
+                    position: absolute;
+                    width: 15px;
+                    height: 15px;
+                    margin-left: -15px;
+                    color: $white-color;
+                    background-color: #ee0000;
+                    border-radius: 50%;
+                    text-align: center;
+                    font-family: $times;
+                }
+            }
+            .dropbtn {
+                margin-right: 20px;
+                color: $white-color;
+                text-decoration: none;
+                color: $white-color;
+                font-size: $nav-size;
+                font-weight: 400;
+                font-size: .8rem;
+                transition: 0.5s;
+                cursor: pointer;
+            }
+              
+            .dropdown {
+                position: relative;
+                display: inline-block;
+            }
+              
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                right: 20px;
+                margin-top: 5px;
+                background-color: #f9f9f9;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 1;
+            }
+              
+            .dropdown-content a {
+                color: black;
+                padding: 8px 10px;
+                font-size: .9rem;
+                text-decoration: none;
+                display: block;
+            }
+              
+            .dropdown-content a:hover {background-color: #f1f1f1;}
+            .dropdown:hover .dropdown-content {display: block;}
+            .dropdown:hover .dropbtn {
+                border-bottom: 3px solid $white-color;
+                padding-bottom: 5px;
+            }
+        }
+    }
+
+    .divider {
+         p {
+            margin-left: 20px;
+            font-size: .4rem;
+         }
+    }
+
+    //main 
+    main {
+        .container {
+            width: 100%;
+
+            .post-cont {
+                width: 100%;
+
+                .prod-back {
+                    width: 100%;
+                    height: 30px;
+
+                    a {
+                        margin-bottom: 7px;
+                        img {
+                            width: 10px;
+                            height: 10px;
+                        }
+                    }
+                    
+                    p {
+                        font-size: .8rem;
+                        margin-left: -10px;
+                    }
+                }
+
+                .form-cont {
+                    width: 100%;
+                    height: 100px;
+
+                    textarea {
+                        width: 330px;
+                        height: 50px;
+                    }
+
+                    .attach-submit {
+                        input[type=submit] {
+                            font-size: .8rem;
+                            width: 70px;
+                        }
+
+                        a {
+                            width: 70px;
+                            font-size: .8rem;
+                            padding: 5px 13px;
+                        }
+                    }
+                }
+
+                .category {
+                    display: flex;
+                    justify-content: space-evenly;
+                    button {
+                        width: 45%;
+                    }
+                }
+
+                .user-post-cont {
+                    width: 100%;
+
+                    .user-post {
+                        width: 100%;
+
+                        .pp-name-date {
+                            .pp-name {
+                                img {
+                                    width: 20px;
+                                    height: 20px;
+                                }
+
+                                h2 {
+                                    font-size: 1rem;
+                                }
+                            }
+
+                            p {
+                                font-size: .5rem;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .shopinfo-cont {
+                position: absolute;
+                width: 100%;
+                height: min-content;
+                top: 62px;
+
+                .shopinfo {
+                    display: none;
+                    width: 100%;
+                    position: fixed;
+                    bottom: 0;
+                    animation: fadeIn .5s;
+                    overflow-y: scroll;
+                    @include scroll();
+
+                    @keyframes fadeIn {
+                        0% { opacity: 0; }
+                        100% { opacity: 1; }
+                      }
+
+                    .dl-btn {
+                        margin-bottom: 50px;
+                    }
+                }
+            }
+
+            .open-shopinfo {
+                display: block;
+                position: fixed;
+                animation: fadeIn 2s;
+                bottom: 0;
+                width: 100%;
+                height: 30px;
+                background-color: $header-color;
+                text-align: center;
+                box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+
+                @keyframes fadeIn {
+                    0% { opacity: 0; }
+                    100% { opacity: 1; }
+                  }
+
+                button {
+                    position: absolute;
+                    bottom: 0;
+                    left: 152px;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    background-color: $header-color;
+                    border: none;
+                    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+                }
+
+                #close {
+                    display: none;
+                }
+            }
+
+            #for-edit {
+                width: 100%;
+                margin-top: 20px;
+
+                .update-cont {
+                    width: 100%;
+
+                    .back-btn {
+                        width: 100%;
+                    }
+
+                    .content-cont {
+                        width: 100%;
+
+                        form {
+                            .input {
+                                width: 100%;
+
+                                input[type=password], input[type=text], input[type=button], input[type=file] {
+                                    width: 250px;
+                                }
+                            }
+                        }
+
+                    }
+                }
+            }
+        }
     }
 }
