--- a/src/sys-user/order-page/userOrder.css
+++ b/src/sys-user/order-page/userOrder.css
@@ -437,4 +437,67 @@ main .container .product-cont .checkout button {
 main .container .product-cont .checkout button:hover {
   opacity: 80%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 5px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+@media (max-width: 575px) {
+  header {
+    height: 50px;
+  }
+  header .app-name a {
+    margin-left: 20px;
+  }
+  header .app-name a img {
+    width: 20px;
+    height: 20px;
+  }
+  header .app-name a h1 {
+    font-size: 0.9rem;
+  }
+  .divider p {
+    margin-left: 20px;
+    font-size: 0.4rem;
+  }
+  main .container {
+    width: 100%;
+  }
+  main .container .product-cont {
+    width: 100%;
+    height: 80vh;
+  }
+  main .container .product-cont .prod-back {
+    width: 100%;
+    height: 30px;
+    margin-top: -13px;
+  }
+  main .container .product-cont .prod-back a {
+    margin-bottom: 7px;
+  }
+  main .container .product-cont .prod-back a img {
+    width: 10px;
+    height: 10px;
+  }
+  main .container .product-cont .prod-back p {
+    font-size: 0.8rem;
+    margin-left: -10px;
+  }
+  main .container .product-cont .product {
+    width: 100%;
+    height: 100%;
+  }
+  main .container .product-cont .product #buyer-info, main .container .product-cont .product #selected-product, main .container .product-cont .product #payment, main .container .product-cont .product #total-price {
+    width: 100%;
+  }
+  main .container .product-cont .checkout {
+    width: 100%;
+    height: 40px;
+    position: fixed;
+    bottom: 0;
+  }
+  main .container .product-cont .checkout .qty label {
+    font-size: 0.8rem;
+  }
+  main .container .product-cont .checkout button {
+    width: 140px;
+    height: 30px;
+  }
 }/*# sourceMappingURL=userOrder.css.map */
