--- a/src/sys-user/order-page/userOrder.scss
+++ b/src/sys-user/order-page/userOrder.scss
@@ -255,3 +255,93 @@ main {
         }
     }
 }
+
+@include extra-small {
+    //header
+    header {
+        height: 50px;
+
+        .app-name {
+            a {
+                margin-left: 20px;
+                
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                h1 {
+                    font-size: .9rem;
+                }
+            }
+        }
+
+    }
+
+    .divider {
+         p {
+            margin-left: 20px;
+            font-size: .4rem;
+         }
+    }
+
+    //main
+    //container
+    //product-cont
+    main {
+        .container {
+            width: 100%;
+
+            .product-cont {
+                width: 100%;
+                height: 80vh;
+
+                .prod-back {
+                    width: 100%;
+                    height: 30px;
+                    margin-top: -13px;
+
+                    a {
+                        margin-bottom: 7px;
+                        img {
+                            width: 10px;
+                            height: 10px;
+                        }
+                    }
+                    
+                    p {
+                        font-size: .8rem;
+                        margin-left: -10px;
+                    }
+                }
+    
+                .product {
+                    width: 100%;
+                    height: 100%;
+    
+                    #buyer-info, #selected-product, #payment, #total-price {
+                        width: 100%;
+                    }
+                }
+
+                .checkout {
+                    width: 100%;
+                    height: 40px;
+                    position: fixed;
+                    bottom: 0;
+
+                    .qty {
+                        label {
+                            font-size: .8rem;
+                        }
+                    }
+
+                    button {
+                        width: 140px;
+                        height: 30px;
+                    }
+                }
+            }
+        }
+    }
+}
