--- a/src/sys-user/product-search/product-search.scss
+++ b/src/sys-user/product-search/product-search.scss
@@ -100,3 +100,33 @@ main {
         }
     }
 }
+
+@include extra-small {
+    //header
+    header {
+        height: 50px;
+
+        .app-name {
+            a {
+                margin-left: 20px;
+                
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                h1 {
+                    font-size: .9rem;
+                }
+            }
+        }
+
+    }
+
+    .divider {
+         p {
+            margin-left: 20px;
+            font-size: .4rem;
+         }
+    }
+}
