--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -86,10 +86,25 @@
             flex-wrap: wrap;
             overflow-y: scroll;
             @include scroll();
-            background-color: $white-color;
-            box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
 
+            .see-more {
+                cursor: pointer;
+                width: 212px;
+                height: 300px;
+                @include flexBox();
+                flex-direction: column;
+                justify-content: center;
+                margin: auto;
+                color: $header-color;
+                opacity: 75%;
+
+                &:hover {
+                    opacity: 100%;
+                }
+            }
+            
             .prod-content {
+                cursor: pointer;
                 width: 212px;
                 height: 300px;
                 color: $header-color;
