--- a/src/sys-user/message-page/userMessage.scss
+++ b/src/sys-user/message-page/userMessage.scss
@@ -645,6 +645,16 @@ main {
                     background-color: $header-color;
                     border: none;
                     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+                
+                    span {
+                        width: 100px;
+                        color: $white-color;
+                        font-size: .7rem;
+                        padding: 9px 10px;
+                        background-color: $header-color;
+                        position: absolute;
+                        border-radius: 0 10px 0 0;
+                    }
                 }
 
                 #close {
