--- a/src/sys-user/product-search/product-search.css
+++ b/src/sys-user/product-search/product-search.css
@@ -338,4 +338,29 @@ main .container .product-cont .product .display-div .prod-display p {
     margin-left: 20px;
     font-size: 0.4rem;
   }
+  main .container {
+    width: 100%;
+  }
+  main .container .product-cont {
+    width: 100%;
+  }
+  main .container .product-cont .search-back {
+    width: 100%;
+    height: 30px;
+  }
+  main .container .product-cont .search-back a img {
+    width: 12px;
+    height: 12px;
+    margin-bottom: 3px;
+  }
+  main .container .product-cont .search-back p {
+    font-size: 0.8rem;
+    margin-left: -12px;
+  }
+  main .container .product-cont .product {
+    width: 100%;
+  }
+  main .container .product-cont .product .display-div {
+    width: 100%;
+  }
 }/*# sourceMappingURL=product-search.css.map */
